# python-moa

./: .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  build.nix  default.nix  dev.nix  pyproject.toml  release.nix  setup.py
benchmarks/: test_compiler.py  test_core.py
docs/: comparison.rst  conf.py  implementation.rst  index.rst  introduction.rst  moa.rst  optimization.rst  publications.rst  roadmap.rst  theory.rst
docs/_static/: mathconf.js
docs/_templates/: layout.html
docs/figures/: moa-implementation.tikz
moa/: __init__.py  analysis.py  array.py  ast.py  compiler.py  core.py  dnf.py  exception.py  onf.py  reduction.py  shape.py  temp.py  testing.py  visualize.py
moa/backend/: __init__.py  backend.py  interface.py  numba.py  numpy.py  python.py
moa/frontend/: __init__.py  __main__.py  array.py  frontend.py  interface.md  moa.py  numpy.py
moa/tests/: test_ast.py  test_reduction.py  test_shape.py  test_visualize.py
notebooks/: 0-introduction.ipynb  0-simple-example.ipynb  1-simple-example-symbolic.ipynb  1-simple-example.ipynb  2-lazy-arrays.ipynb  2-simple-example-symbolic.ipynb  3-benchmarks.ipynb  3-lazy-arrays.ipynb  4-benchmarks.ipynb  5-reduce.ipynb  6-inner-product.ipynb  Lenore Example 1.ipynb
tests/: test_analysis.py  test_array.py  test_ast.py  test_compiler.py  test_dnf.py  test_integration.py  test_onf.py  test_reduction.py  test_shape.py  test_visualize.py
tests/backend/: test_python.py
tests/benchmark/: test_core.py  test_numba.py
tests/frontend/: test_array.py  test_moa.py
(+9 files in other folders)
