[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "moa"
author = "Christopher Ostrouchov"
author-email = "costrouchov@quansight.com"
description-file = "README.md"
requires = [
  "sly",
]
classifiers=[
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
]