[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "moa"
author = "Christopher Ostrouchov"
author-email = "costrouchov@quansight.com"
home-page = "https://github.com/Quansight-Labs/python-moa"
license = "BSD-3"
requires-python = ">=3.6"
description-file = "README.md"
requires = [
  "sly",
  "astunparse",
]
classifiers=[
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
]

[tool.flit.metadata.requires-extra]
test = ["pytest", "pytest-cov"]
doc = ["sphinx", "sphinxcontrib-tikz"]
viz = ["graphviz"]

[tool.flit.metadata.urls]
Documentation = "https://python-moa.readthedocs.io"